tools/hermes/tests/fixtures/reject_safe_is_safe/hermes.stderr

=== Hermes Verification Failed ===

[Hermes Error] hermes::doc_block

  × Documentation block error: `isSafe` sections are only permitted on
  │ `unsafe` traits.
   ╭─[[PROJECT_ROOT]/src/lib.rs:2:1]
 1 │ /// ```hermes
 2 │ /// isSafe :
   · ──────┬─────
   ·       ╰── problematic block
 3 │ ///   true
   ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: `isSafe` sections are only permitted on
  │ `unsafe` traits.
   ╭─[[PROJECT_ROOT]/src/lib.rs:8:1]
 7 │ /// ```hermes
 8 │ /// isSafe :
   · ──────┬─────
   ·       ╰── problematic block
 9 │ ///   true
   ╰────


[Hermes Error] hermes::doc_block

  × Documentation block error: `isSafe` sections are only permitted on
  │ `unsafe` traits.
    ╭─[[PROJECT_ROOT]/src/lib.rs:16:1]
 15 │ /// ```hermes
 16 │ /// isSafe
    · ─────┬────
    ·      ╰── problematic block
 17 │ /// ```
    ╰────

Error: Aborting due to 3 previous errors.
